--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -6,3 +6,11 @@
     height: 3rem;
     border: 1px solid #1e5dd2;
 }
+.vanilla {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: lightslategray;
+  height: 3rem;
+  border: 1px solid chocolate;
+}
